<resources>
    <string name="app_name">Foodie</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restauarant_name">Restauarant Name</string>
    <string name="place_order">Place Order</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="foodie">Foodie</string>
    <string name="login_background">login background</string>
    <string name="logo">logo</string>
    <string name="rated_4_5">Rated 4.5</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="favourite_icon">favourite icon</string>
    <string name="hiphen">-</string>
    <string name="price">price</string>
    <string name="user">User</string>
    <string name="question1">What is Foodie™?</string>
    <string name="answer1">Foodie™ is a food delivery service that does Home Deliveries to it\'s customers, from over 20000 restaurants / outlets all over India.We are one of INDIA\'s premier Home Delivery Service.Operational since 1998, we have served over 7,50,000 people so far.</string>
    <string name="question2">What locations does Foodie service, at the moment?</string>
    <string name="answer2">Currently, Foodie is servicing its customers all over India.Soon, you will see us expand our service coverage ABROAD, as well.</string>
    <string name="question3">Can I order from 2 or more restaurants at the same time?</string>
    <string name="answer3">No, You can only order from one restaurant at a time. However, after one order is placed, you can always go for an other one.</string>
    <string name="question4">Why do you charge delivery charges?</string>
    <string name="answer4">Each restaurant gives us a small percentage of the order amount. But for small orders we cannot afford to deliver within the commission we receive. Instead of declining such orders, we give you the option of delivering it to you, if you are prepared to pay the delivery charges.</string>
    <string name="question5">Are the prices listed on this app accurate and binding?</string>
    <string name="answer5">We make every effort to keep the prices updated and accurate. Prices listed on this website are however approximate and subject to changes by the Restaurant and Taxes.The final price is as per the ACTUAL BILL raised by the Restaurant and presented to you, at the time of the delivery.</string>
    <string name="question6">Can I get discounts for big orders?</string>
    <string name="answer6">Sorry, as a practice we do not give discounts as we work on very slim margins, already.But, we could check with the Restaurant - and IF they offer any special discount, we\'d be happy to pass it on to you!</string>
    <string name="question7">How much time does it take to deliver the order?</string>
    <string name="answer7">Generally it takes between 45 minutes to 1 hour time to deliver the order. Due to long distance or heavy traffic, delivery might take few extra minutes.</string>
    <string name="question8">How do I know my order has gone through?</string>
    <string name="answer8">You will see an \'Order Placed\' dialog box and also receive a Notification.</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your Registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="forgot_password_vector">forgot</string>
    <string name="your_previous_orders">Your Previous Orders</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="can_t_find_restaurant">Can\'t Find Restaurant</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="signup">SignUp</string>
    <string name="textview">TextView</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="otp">OTP</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="resetvector">resetvector</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="_4_5">4.5</string>
    <string name="_100_person">100/person</string>
    <string name="date">date</string>
    <string name="total_cost">Total Cost</string>
    <string name="rs_00">Rs !00</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="_1">1</string>
    <string name="food_item">Food Item</string>
    <string name="Price">Price</string>
    <string name="add">ADD</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="rating">Rating</string>
    <string name="noFav">You Don\'t have any Favourite Restaurants.</string>
    <string name="sort_by">Sort By:</string>
    <string name="you_don_t_have_any_orders_yet">You Don\'t Have any Orders Yet</string>
    <string name="browse_restaurants">Browse Restaurants</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="total_orders_n25">Total Orders : 25</string>
</resources>