<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryLight1"
    tools:context=".fragment.LoginFragment">

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:layout_weight=".3"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_mobile"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_weight=".3"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight=".3"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#3E3E3E"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/roboto"
        android:gravity="bottom|center_horizontal"
        android:text="@string/don_t_have_an_account" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal"
        android:text="@string/signup"
        android:textColor="#3E3E3E"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>