<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:context=".fragment.FaqFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_faq"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvFAQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/question1"
                android:textColor="@color/PrimaryDark1"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />


            <TextView
                android:id="@+id/tvFAQA1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/answer1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_faq"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvFAQ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/question2"
                android:textColor="@color/PrimaryDark1"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />


            <TextView
                android:id="@+id/tvFAQA2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/answer2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_faq"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvFAQ3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/question3"
                android:textColor="@color/PrimaryDark1"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />


            <TextView
                android:id="@+id/tvFAQA3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/answer3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_faq"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvFAQ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/question4"
                android:textColor="@color/PrimaryDark1"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />


            <TextView
                android:id="@+id/tvFAQA4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/answer4"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_faq"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvFAQ5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/question5"
                android:textColor="@color/PrimaryDark1"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />


            <TextView
                android:id="@+id/tvFAQA5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/answer5"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_faq"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvFAQ6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/question6"
                android:textColor="@color/PrimaryDark1"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />


            <TextView
                android:id="@+id/tvFAQA6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/answer6"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_faq"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvFAQ7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/question7"
                android:textColor="@color/PrimaryDark1"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />


            <TextView
                android:id="@+id/tvFAQA7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/answer7"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/custom_faq"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvFAQ8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/question8"
                android:textColor="@color/PrimaryDark1"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_down" />


            <TextView
                android:id="@+id/tvFAQA8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/answer8"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:visibility="gone" />


        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="invisible" />

    </LinearLayout>
</ScrollView>