<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:text="@string/hiphen"
            android:textColor="@color/PrimaryDark1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvFoodItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/food_item"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPriceCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:paddingStart="1dp"
            android:paddingEnd="20dp"
            android:text="@string/price"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>