<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/PrimaryLight1"
    tools:context=".fragment.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:contentDescription="@string/forgotpasswordvector"
        android:scaleType="fitStart"
        android:src="@drawable/ic_forgotpassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:drawableEnd="@drawable/ic_arrow"
        android:text="@string/next" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" />

</LinearLayout>